Part 2 of refactor. Greatly simplified the component model - there can be only one input plugin, one memory stick plugin, and one umd plugin. They have all been split in to their own members in params and instance. This makes things easier to code against (no iterating over IO to find something, etc). One can argue that having multiple of each would be nice, however I think it would be the exception rather than the rule, and the emulator codebase is already confusing enough. Note that IO and IIODriver still remain for the day when networking/USB/GPS/whatever is added.
Next step is to clean up the CPU interfaces. I'd like to try to move anything that could be in the debug interfaces to the debug interfaces. This is in preparation for the ultra CPU core that I'm getting the itch to work on (the .NET based dynarec will never be fast enough to 100% games - at least not for a few years). I'd also like to see about moving most of the UI code in to interfaces and moving the UI to a separate assembly. I think that enough work has been invested in Player as a host that I don't want to duplicate it if I decide to write a different frontend (and I am thinking about it - the current one is buggy and not so intuitive).

After that I will either work on the ultra CPU or really go in heavy on one of the video plugins (still debating between OGL and MDX). I want to play games, damnit!

--- a/Noxa.Emulation.Psp.Input.XInput/Noxa.Emulation.Psp.Input.XInput.csproj
+++ b/Noxa.Emulation.Psp.Input.XInput/Noxa.Emulation.Psp.Input.XInput.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2EFF513B-ABE1-48C4-AE6F-F79A091AD457}</ProjectGuid>
+    <ProjectGuid>{66261194-90FB-4F51-91DD-6C49741AFB3C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Noxa.Emulation.Psp.IO.Media.FileSystem</RootNamespace>
-    <AssemblyName>Noxa.Emulation.Psp.IO.Media.HostFileSystem</AssemblyName>
+    <RootNamespace>Noxa.Emulation.Psp.Input.XInput</RootNamespace>
+    <AssemblyName>Noxa.Emulation.Psp.Input.XInput</AssemblyName>
     <SccProjectName>
     </SccProjectName>
     <SccLocalPath>
@@ -38,31 +38,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\MediaConfiguration.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="NativeXInput.cs" />
+    <Compile Include="Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
-    <Compile Include="Configuration\MediaConfiguration.Designer.cs">
-      <DependentUpon>MediaConfiguration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GameHostFileSystem.cs" />
-    <Compile Include="MediaFile.cs" />
-    <Compile Include="MediaFolder.cs" />
-    <Compile Include="MemoryStickDevice.cs" />
+    <Compile Include="XInputDriver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UmdDevice.cs" />
-    <Compile Include="UserHostFileSystem.cs" />
+    <Compile Include="XInputPad.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Noxa.Emulation.Psp.Configuration\Noxa.Emulation.Psp.Configuration.csproj">
-      <Project>{9FC81B11-9C39-42AE-9DF6-3C08D4A9F8C1}</Project>
-      <Name>Noxa.Emulation.Psp.Configuration</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Noxa.Emulation.Psp\Noxa.Emulation.Psp.csproj">
       <Project>{C211B8D0-BA1C-4B50-A19F-CEE9C396CA56}</Project>
       <Name>Noxa.Emulation.Psp</Name>
@@ -73,9 +62,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Configuration\MediaConfiguration.resx">
+    <EmbeddedResource Include="Strings.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>MediaConfiguration.cs</DependentUpon>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
