--- a/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
+++ b/Noxa.Emulation.Psp/Noxa.Emulation.Psp.csproj
@@ -83,13 +83,13 @@
     <Compile Include="IEmulationHost.cs" />
     <Compile Include="IEmulationInstance.cs" />
     <Compile Include="IO\IIODriver.cs" />
-    <Compile Include="IO\Input\IInputDevice.cs" />
-    <Compile Include="IO\Media\IMediaDevice.cs" />
-    <Compile Include="IO\Media\IMediaFolder.cs" />
-    <Compile Include="IO\Media\IMediaFile.cs" />
-    <Compile Include="IO\Media\IMediaItem.cs" />
-    <Compile Include="IO\Media\IMemoryStickDevice.cs" />
-    <Compile Include="IO\Media\IUmdDevice.cs" />
+    <Compile Include="Input\IInputDevice.cs" />
+    <Compile Include="Media\IMediaDevice.cs" />
+    <Compile Include="Media\IMediaFolder.cs" />
+    <Compile Include="Media\IMediaFile.cs" />
+    <Compile Include="Media\IMediaItem.cs" />
+    <Compile Include="Media\IMemoryStickDevice.cs" />
+    <Compile Include="Media\IUmdDevice.cs" />
     <Compile Include="Games\GameLoader.cs" />
     <Compile Include="NullComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
