--- a/Noxa.Emulation.Psp.Media.HostFileSystem/Noxa.Emulation.Psp.Media.HostFileSystem.csproj
+++ b/Noxa.Emulation.Psp.Media.HostFileSystem/Noxa.Emulation.Psp.Media.HostFileSystem.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C8A3B65C-322A-431A-A7EA-3A7A0CDA80A3}</ProjectGuid>
+    <ProjectGuid>{30EA9C83-286D-4560-8B12-6E4530A5ECAD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Noxa.Emulation.Psp.IO.Media.Iso</RootNamespace>
-    <AssemblyName>Noxa.Emulation.Psp.IO.Media.Iso</AssemblyName>
+    <RootNamespace>Noxa.Emulation.Psp.Media.FileSystem</RootNamespace>
+    <AssemblyName>Noxa.Emulation.Psp.Media.HostFileSystem</AssemblyName>
     <SccProjectName>
     </SccProjectName>
     <SccLocalPath>
@@ -26,7 +26,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -35,11 +34,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -51,13 +50,13 @@
     <Compile Include="Configuration\MediaConfiguration.Designer.cs">
       <DependentUpon>MediaConfiguration.cs</DependentUpon>
     </Compile>
-    <Compile Include="IsoFileSystem.cs" />
-    <Compile Include="IsoStream.cs" />
+    <Compile Include="GameHostFileSystem.cs" />
     <Compile Include="MediaFile.cs" />
     <Compile Include="MediaFolder.cs" />
+    <Compile Include="MemoryStickDevice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UmdDevice.cs" />
-    <Compile Include="UmdDevice.FileSystem.cs" />
+    <Compile Include="UserHostFileSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Noxa.Emulation.Psp.Configuration\Noxa.Emulation.Psp.Configuration.csproj">
@@ -75,8 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Configuration\MediaConfiguration.resx">
-      <DependentUpon>MediaConfiguration.cs</DependentUpon>
       <SubType>Designer</SubType>
+      <DependentUpon>MediaConfiguration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
