Implemented ultra code cache. It uses a value type CodeBlock and a separate ref type CodeBlockStatistics for stats - I hope this makes things better. I'm still using array<>s for everything here, which sucks. Ideally it would be just a bunch of pointers, but I then, of course, can't use any gc types. I'll profile it once the CPU is done and see what kind of impact it has.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -238,6 +238,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Options.h"
+				>
+			</File>
+			<File
+				RelativePath=".\R4000Cache.h"
+				>
+			</File>
+			<File
 				RelativePath=".\R4000Capabilities.h"
 				>
 			</File>
@@ -263,6 +271,10 @@
 			</File>
 			<File
 				RelativePath=".\R4000Cpu.h"
+				>
+			</File>
+			<File
+				RelativePath=".\R4000GenContext.h"
 				>
 			</File>
 			<File
