--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -231,6 +231,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000Generator_Fpu.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\R4000Generator_Instructions.cpp"
 				>
 			</File>
