Code cache now has an unmanaged lookup table (used via QuickPointerLookup method) - this means that in the case of a jump thunk hit, things can stay entirely unmanaged.
Because MIPS relies so heavily on jr and variants, I'm going to have to implement a new bounce method - it will, given a target address, look up the target using QuickPointerLookup and if found jump right to it. If it is not found, it will return and let the main execute loop take care of things. This should, in the steady state, keep almost everything native.

Found that the perf stat for tracking native/managed switches is .NET CLR Interop/# of marshalling. DynaRec runs about 1k per second - Ultra runs about 100-700k per second. Needs to be fixed!

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -215,6 +215,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000Cache.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\R4000Cpu.cpp"
 				>
 			</File>
