New statistics for all the fancy new runtime features - I added some unmanaged stuff so that the stats can be incremented without transitioning to managed code.
Block builder now does some fancy stuff with JR and kin by emitting a call to the quick pointer lookup and jumping directly to the target if it can. This means that in the steady state execution never has to go back to the main execution loop (note the differences in ExecutionLoops vs CodeBlocksExecuted). This is great! I think there is a bug with syscalls though - they need to always return when now I think they may be getting this inlined jump. Needs testing.

Sample 1 and the controller sample run again, maybe others now too.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000Statistics.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Stdafx.cpp"
 				>
 				<FileConfiguration
