New samples 2-5 - with a simple hello world printer and the first 3 NeHe lessons. Sample 5, which does rotating triangles, does not rotate things. Either there is a floating point bug (0 propagating again, which I think happened before), or the video driver doesn't implement matrices :)

--- a/Tests/mysamples/sample2/Makefile
+++ b/Tests/mysamples/sample2/Makefile
@@ -1,4 +1,4 @@
-TARGET = sample1
+TARGET = sample2
 OBJS = main.o
 
 INCDIR = 
@@ -10,7 +10,7 @@ LIBDIR =
 LDFLAGS =
 
 EXTRA_TARGETS = EBOOT.PBP
-PSP_EBOOT_TITLE = Sample 1 - main()
+PSP_EBOOT_TITLE = Sample 2 - Loops & printf
 
 PSPSDK=$(shell psp-config --pspsdk-path)
 include $(PSPSDK)/lib/build.mak
