More skeleton work done to D3D and OGL drivers.
MemoryPool class that will be used by native code in the video interface for command list allocation and such. Untested.

Some of the Video API done - command list and such copied from managed VideoCommand enum (need to see if using enum class allows native codegen - would be better to reuse it). The packet and display list structs are done, I think.

VideoApi.h is where the main function pointer table lives. The idea is that the CPU will, on startup, look for the video driver and request an instance of the interface. Then it can emit calls to the functions directly, remaining in native code across assembly boundaries. Not that clean, but also not THAT dirty.

I still want to keep the current (read: old) interface that IVideoDriver uses, as I'd like the current BIOS to continue working and not have to hack something together for the dynarec. I'd like this new video API to just be something extra. I don't think this will be too hard to do - I just have to make sure that deep down inside the video driver there is a common code path - how the data gets there (via managed interface through BIOS or native video API) it should all end up in the same place.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -273,6 +273,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000VideoInterface.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Stdafx.cpp"
 				>
 				<FileConfiguration
@@ -298,6 +302,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\MemoryPool.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Noxa.Emulation.Psp.Cpu.R4000Ultra.h"
 				>
@@ -379,6 +387,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000VideoInterface.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
@@ -391,6 +403,22 @@
 				>
 				<File
 					RelativePath="..\Shared\Include\NoxaShared.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\VideoApi.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\VideoCommands.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\VideoDisplayList.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\VideoPacket.h"
 					>
 				</File>
 			</Filter>
